--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,9 @@
 <body>
 <div class="page-wrapper">
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1"><a href="/">Red Hat Demo App 입니다.</a></span>
+		<span class="navbar-brand mb-0 h1">
+        <img src=https://avatars.githubusercontent.com/u/33972111?s=280&v=4" width=50>
+		<a href="/">Red Hat Demo App 입니다.</a>
+		</span>
         <a class="float-right" href="/add" title="새로운 맴버 등록">새로운 맴버 등록</a>
     </nav>
