한글표기법에 따라 맴버->멤버

--- a/views/edit-player.ejs
+++ b/views/edit-player.ejs
@@ -43,10 +43,10 @@
                     </select>
                 </div>
             </div>
-            <button type="submit" class="btn btn-success float-right">맴버 수정</button>
+            <button type="submit" class="btn btn-success float-right">멤버 수정</button>
         </form>
     <% } else { %>
-        <p class="text-center">항목을 찾지 못했습니다.. 새로운 맴버를 등록하시려면 <a href="/add">여기</a> 를 클릭하십시오.</p>
+        <p class="text-center">항목을 찾지 못했습니다.. 새로운 멤버를 등록하시려면 <a href="/add">여기</a> 를 클릭하십시오.</p>
     <% } %>
 </div>
 </div>
