--- a/views/add-player.ejs
+++ b/views/add-player.ejs
@@ -36,7 +36,7 @@
                     </select>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary float-right">맴버 등록</button>
+            <button type="submit" class="btn btn-primary float-right">멤버 등록</button>
         </form>
     </div>
 </div>
